--- a/package.json
+++ b/package.json
@@ -3,8 +3,24 @@
   "name": "image-q",
   "version": "0.1.4",
   "description": "Image Quantization Library in **TypeScript** *(MIT Licensed)*",
+  "license": "MIT",
   "contributors": [],
   "homepage": "https://github.com/igor-bezkrovny/image-quantization",
+  "scripts": {
+    "prepublish": "node_modules/.bin/webpack",
+    "dist": "node_modules/.bin/webpack"
+  },
+  "preferGlobal": "false",
+  "main": "./dist/iq.js",
+  "typings" : "./dist/iq.d.ts",
+  "dependencies": {},
+  "devDependencies": {
+    "source-map-loader": "^0.1.5",
+    "ts-loader": "^0.8.2",
+    "typedoc": "^0.4.4",
+    "typescript": "^2.0.0",
+    "webpack": "^1.13.1"
+  },
   "keywords": [
     "image",
     "palette",
@@ -22,26 +38,11 @@
   "engines": {
     "node": ">=0.9.0"
   },
-  "main": "./_builds/node-iq.js",
-  "scripts": {
-    "prepublish": "node_modules/.bin/webpack",
-    "dist": "node_modules/.bin/webpack"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/igor-bezkrovny/image-quantization"
   },
   "bugs": {
     "url": "https://github.com/igor-bezkrovny/image-quantization/issues"
-  },
-  "dependencies": {},
-  "preferGlobal": "false",
-  "license": "MIT",
-  "devDependencies": {
-    "source-map-loader": "^0.1.5",
-    "ts-loader": "^0.8.2",
-    "typedoc": "^0.4.4",
-    "typescript": "^2.0.0",
-    "webpack": "^1.13.1"
   }
 }
