--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,11 @@
 {
 	"compilerOptions" : {
-		"outDir" : "../dist/",
+		"outDir" : "./dist/",
 		"sourceMap" : true,
+		"inlineSources" : true,
 		"module" : "commonjs",
 		"moduleResolution" : "node",
-		"target" : "es6",
+		"target" : "es5",
 		"noEmit" : true,
 		"noEmitOnError" : true,
 		"noFallthroughCasesInSwitch" : true,
@@ -21,6 +22,6 @@
 		"diagnostics" : true
 	},
 	"files" : [
-		"./iq.ts"
+		"./src/iq.ts"
 	]
 }
