--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "contributors": [],
   "homepage": "https://github.com/igor-bezkrovny/image-quantization",
   "scripts": {
+    "test" : "node_modules/.bin/_mocha.cmd --recursive",
     "prepublish": "node_modules/.bin/webpack",
     "dist": "node_modules/.bin/webpack",
     "watch": "node_modules/.bin/webpack --watch"
