--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "contributors": [],
   "homepage": "https://github.com/igor-bezkrovny/image-quantization",
   "scripts": {
+    "test": "node_modules/.bin/mocha --recursive",
     "prepublish": "node_modules/.bin/webpack",
     "dist": "node_modules/.bin/webpack",
     "watch": "node_modules/.bin/webpack --watch"
@@ -17,6 +18,7 @@
   "dependencies": {},
   "devDependencies": {
     "chai": "^3.5.0",
+    "mocha": "^3.0.2",
     "source-map-loader": "^0.1.5",
     "ts-loader": "^0.8.2",
     "typedoc": "^0.4.4",
