--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,9 @@ node_js:
   - "6.1"
   - "5.11"
   - "4.2"
+
+before_deploy: "npm version patch"
+
+deploy:
+  provider: npm
+  api_key: "8701189c-d219-40fc-ae6c-51cbd53eef18"
