--- a/demo/html/package.json
+++ b/demo/html/package.json
@@ -26,7 +26,7 @@
     "url": "https://github.com/igor-bezkrovny/image-quantization/issues"
   },
   "scripts": {
-    "dist": "node_modules/.bin/webpack"
+    "dist": "webpack"
   },
   "dependencies": {},
   "preferGlobal": "false",
