--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,5 @@ before_deploy: "npm version patch"
 
 deploy:
   provider: npm
+  email: "igor.bezkrovny@gmail.com"
   api_key: "8701189c-d219-40fc-ae6c-51cbd53eef18"
