--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "image-q",
-  "version": "2.0.0",
+  "version": "2.0.0-dev.20180125",
   "description": "Image Quantization Library in **TypeScript** *(MIT Licensed)*",
   "license": "MIT",
   "contributors": [],
@@ -9,7 +9,7 @@
   "module": "dist/esm/image-q.js",
   "types": "dist/esm/image-q.d.ts",
   "scripts": {
-    "test": "npm run lint",
+    "test": "npm run lint && jest",
     "lint": "tslint --format stylish --config tslint.json --project tsconfig.json",
     "build": "npm run esm && npm run cjs && npm run umd",
     "esm": "tsc --outDir dist/esm",
@@ -50,9 +50,12 @@
     "rollup-plugin-local-resolve": "^1.0.7"
   },
   "devDependencies": {
+    "@types/jest": "^22.1.0",
+    "jest": "^22.1.4",
     "rollup": "^0.54.1",
     "rollup-plugin-commonjs": "^8.2.6",
     "rollup-plugin-node-resolve": "^3.0.2",
+    "ts-jest": "^22.0.1",
     "tslint": "^5.9.1",
     "tslint-config-airbnb": "^5.4.2",
     "tslint-consistent-codestyle": "^1.11.0",
