code coverage added, tests use typescript code to test

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
+/.vscode
+/.idea
+
 /dist
 
-/.idea
+/coverage
 /examples/node.js/demo.js
 /examples/node.js/demo.js.map
 /examples/apply-palette-from-file/out
