--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,9 @@
 		"declaration": true,
 		"plugins": [
 			{
-				"name": "tslint-language-service"
+				"name": "tslint-language-service",
+				"supressWhileTypeErrorsPresent": false,
+				"ignoreDefinitionFiles": true
 			}
 		]
 	},
