--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,11 @@
 		"strict": true,
 		"forceConsistentCasingInFileNames": true,
 		"declaration": true,
+		"downlevelIteration": true,
+		"lib": [
+			"dom",
+			"esnext"
+		],
 		"plugins": [
 			{
 				"name": "tslint-language-service",
