--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,5 @@ deploy:
   provider: npm
   email: "igor.bezkrovny@gmail.com"
   api_key: "8701189c-d219-40fc-ae6c-51cbd53eef18"
+
+after_success: 'npm run coveralls'
