--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "image-q",
-  "version": "2.0.0-dev.20180125",
+  "version": "2.0.1",
   "description": "Image Quantization Library in **TypeScript** *(MIT Licensed)*",
   "license": "MIT",
   "contributors": [],
