jest: test files removed from coverage

--- a/package.json
+++ b/package.json
@@ -21,13 +21,6 @@
     "dist"
   ],
   "jest": {
-    "collectCoverage": true,
-    "mapCoverage": true,
-    "coverageReporters": [
-      "lcov",
-      "text-summary",
-      "html"
-    ],
     "roots": [
       "<rootDir>/src",
       "<rootDir>/tests"
@@ -40,7 +33,7 @@
     "transform": {
       "^.+\\.tsx?$": "ts-jest"
     },
-    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "testRegex": "(test|spec)\\.(jsx?|tsx?)$",
     "moduleFileExtensions": [
       "ts",
       "tsx",
@@ -48,6 +41,15 @@
       "jsx",
       "json",
       "node"
+    ],
+    "collectCoverage": true,
+    "coverageReporters": [
+      "lcov",
+      "text-summary",
+      "html"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.{ts,tsx}"
     ]
   },
   "preferGlobal": false,
