--- a/package.json
+++ b/package.json
@@ -81,7 +81,6 @@
   "devDependencies": {
     "@ibezkrovnyi/tslint-rules": "0.0.3",
     "@types/jest": "22.1.3",
-    "@types/node": "9.4.6",
     "@types/pngjs": "3.3.0",
     "coveralls": "3.0.0",
     "gh-pages": "1.1.0",
@@ -100,5 +99,7 @@
     "typedoc": "0.10.0",
     "typescript": "2.7.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@types/node": "9.4.6"
+  }
 }
