--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
 		"noFallthroughCasesInSwitch": true,
 		"noUnusedLocals": false,
 		"noUnusedParameters": false,
+		"noErrorTruncation": true,
 		"preserveConstEnums": true,
 		"pretty": false,
 		"strict": true,
@@ -17,7 +18,7 @@
 		"downlevelIteration": true,
 		"lib": [
 			"dom",
-			"esnext",
+			"esnext"
 		],
 		"plugins": [
 			{
