enable ts-jest target: es5 (because of Node 6)

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     ],
     "globals": {
       "ts-jest": {
+        "tsConfigFile": "./tests/tsconfig.json",
         "skipBabel": true
       }
     },
