update: use eslint instead of tslint

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "tsc --outDir dist/esm && tsc -m commonjs -t es5 --outDir dist/cjs && rollup -i dist/cjs/image-q.js -o dist/umd/image-q.js -f umd -n image-q --config",
     "test:watch": "jest --watch --env=node",
     "deploy": "npm update && npm run lint && jest && npm run build && npm run gh-pages && npm version patch && git push --follow-tags && npm publish",
-    "lint": "tslint --format verbose --config tslint.json --project tsconfig.json",
+    "lint": "eslint \"./src/**/*\"",
     "gh-pages": "rimraf ./docs && typedoc.cmd src && gh-pages -d docs",
     "coveralls": "cat ./coverage/lcov.info | node node_modules/.bin/coveralls"
   },
@@ -85,8 +85,16 @@
     "@types/core-js": "2.5.0",
     "@types/jest": "22.2.0",
     "@types/pngjs": "3.3.0",
+    "@typescript-eslint/eslint-plugin": "^1.5.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^1.5.0",
+    "@typescript-eslint/parser": "^1.5.0",
     "core-js": "2.5.4",
     "coveralls": "3.0.1",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-prettier": "^4.1.0",
+    "prettier": "^1.16.4",
+    "eslint-plugin-import": "^2.16.0",
     "gh-pages": "1.2.0",
     "jest": "22.4.0",
     "pngjs": "3.3.3",
