--- a/package.json
+++ b/package.json
@@ -93,11 +93,12 @@
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-prettier": "^4.1.0",
-    "prettier": "^1.16.4",
     "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-prettier": "^3.0.1",
     "gh-pages": "1.2.0",
     "jest": "22.4.0",
     "pngjs": "3.3.3",
+    "prettier": "^1.16.4",
     "rimraf": "*",
     "rollup": "0.57.0",
     "rollup-plugin-commonjs": "9.1.0",
