--- a/demo/package.json
+++ b/demo/package.json
@@ -27,9 +27,7 @@
     "url": "https://github.com/igor-bezkrovny/image-quantization/issues"
   },
   "scripts": {
-    "prepack": "pnpm build",
-    "build": "webpack",
-    "start": "pnpm build && http-server ./ -c-1"
+    "start": "webpack && http-server ./ -c-1"
   },
   "preferGlobal": false,
   "license": "MIT",
