--- a/packages/image-q/tsconfig.json
+++ b/packages/image-q/tsconfig.json
@@ -12,7 +12,7 @@
     "moduleResolution": "node",
     "downlevelIteration": true,
     "lib": ["dom", "esnext"],
-    "types": ["node"],
+    "types": ["node", "jest"],
 
     "strict": true,
     "noUnusedLocals": true,
@@ -24,5 +24,5 @@
 
     "pretty": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "tests/**/*"]
 }
