--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-        registry-url: https://registry.npmjs.org/
+        registry-url: 'https://registry.npmjs.org'
     - name: Cache .pnpm-store
       uses: actions/cache@v1
       with:
