--- a/packages/image-q/tsconfig.build-cjs.json
+++ b/packages/image-q/tsconfig.build-cjs.json
@@ -6,5 +6,5 @@
     "types": ["node"],
     "tsBuildInfoFile": "./node_modules/.cache/tsc/tsconfig.build-cjs.tsbuildinfo"
   },
-  "include": ["src/**/*"]
+  "include": ["src"]
 }
