--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -9,6 +9,7 @@
     "target": "esnext",
     "moduleResolution": "node",
     "downlevelIteration": true,
+    "esModuleInterop": true,
 
     "lib": ["dom", "esnext"],
     "types": ["node", "jest"],
